fix horizontal scroll bug on all devices

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ header {
   width: 100%;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 body {
   background-color: var(--background-color);
   margin: 0;
@@ -28,8 +33,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-flow: row wrap;
-  max-width: 100%;
-  overflow-x: hidden;
 }
 
 .App {
@@ -38,7 +41,7 @@ body {
   width: 100%;
 }
 
-.box-container {
+.box-containerer {
   flex: 4;
   display: flex;
   flex-direction: column;
@@ -63,8 +66,8 @@ body {
 #about-description {
   color: var(--secondary-font-color);
   margin-top: -0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
   margin-bottom: 1.5rem;
 }
 
@@ -141,7 +144,7 @@ body {
   border-radius: 50%;
   color: white;
   font-weight: bold;
-  margin: 0 1.5rem;
+  margin: 0 1.3rem;
 }
 
 .social-media-buttons {
